# rocsift-glog-fork

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE.md  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js
.github/ISSUE_TEMPLATE/: bug-report---.md  feature-request---.md
.glog/: glog-scan.sarif
_sources/: index.rst.txt
_sources/api/: define_visibility_8h_1a0cfe97de499162fa8cd2b7083c2e36bf.rst.txt  dir_include.rst.txt  dir_include_rocsift.rst.txt  enum_chipid_8h_1aa90e641d9078c113b8a30b23b843cdf8.rst.txt  enum_mtype_8h_1ad0e7416c5f6031daf7c02e8ebdde8568.rst.txt  enum_pm4_8h_1a1cd3a465b2eb64659c3824b102833785.rst.txt  enum_pm4_8h_1aa7a52ffd04fdfabbc94959a8a9ceb41b.rst.txt  enum_sift_8h_1a17a86ed2010023c76c0155895b659951.rst.txt  enum_sift_8h_1aa9670ab3ebf3ba3cb5bbe85cb8579db7.rst.txt  enum_sift_8h_1ae4f3483e524f8a5a9de35716fd7b1360.rst.txt  enum_status_8h_1a9717b0fa8559dd8925ce32cb47e598b4.rst.txt  file_include_rocsift_chipid.h.rst.txt  file_include_rocsift_kfd.h.rst.txt  file_include_rocsift_mtype.h.rst.txt  file_include_rocsift_pm4.h.rst.txt  file_include_rocsift_sift.h.rst.txt  file_include_rocsift_status.h.rst.txt  file_include_rocsift_visibility.h.rst.txt  file_include_rocsift_xlator.h.rst.txt  function_chipid_8h_1a1fb7dd4669c7d77ecedb9bc1ea2fdd61.rst.txt  function_chipid_8h_1a27f3330c33ea49f1293f5a8c5d2ece41.rst.txt  function_chipid_8h_1a319da37d4fbec9794cb21bf11754731f.rst.txt  function_chipid_8h_1a331e266a3d9d67dfce7067cddd7f3a0a.rst.txt  function_chipid_8h_1a5aefc2d12ff9d5a99653f7c9d0bb2ac1.rst.txt  function_chipid_8h_1a5d3caf697d3af23d5ae081b1c606c82a.rst.txt  function_chipid_8h_1a782964a5fcaf5a8e139488b5b23ea0af.rst.txt  function_chipid_8h_1a826af65ad0588c2aeae2e4afc08c619d.rst.txt  function_chipid_8h_1a9c93bc26aefd9cf87b5e5ecec5ba55a5.rst.txt  function_chipid_8h_1a9d1c916f66e7881eea5de48819a15cf9.rst.txt  function_chipid_8h_1ac2b5fba8cfb8803848edede3c45940f9.rst.txt  function_chipid_8h_1afc50a5359fb58b0a10d75642b851fdf4.rst.txt  function_kfd_8h_1a13a2f3f0520b5ccfa479cfddcb661d62.rst.txt  function_kfd_8h_1a2c54ae64b9e986583b6c67fa71da9ae9.rst.txt  function_kfd_8h_1a409b8b71b341fb66e3f850609ec29157.rst.txt  function_kfd_8h_1a5e6abad108a962fdca0feaf18e6b5aa8.rst.txt  function_kfd_8h_1a9710732d0435aef117bfa8c777627806.rst.txt  function_kfd_8h_1a9769b5977c45c804abdf067755f2b883.rst.txt  function_kfd_8h_1aaf5879c8964a9caf3bba318d54fd33c7.rst.txt  function_kfd_8h_1adee799872b27180fec7e6a82e110d3e1.rst.txt  function_mtype_8h_1a2de72a5e97b834989078fd6f33eaf2d9.rst.txt  (+66 more)
api/: define_visibility_8h_1a0cfe97de499162fa8cd2b7083c2e36bf.html  dir_include.html  dir_include_rocsift.html  enum_chipid_8h_1aa90e641d9078c113b8a30b23b843cdf8.html  enum_mtype_8h_1ad0e7416c5f6031daf7c02e8ebdde8568.html  enum_pm4_8h_1a1cd3a465b2eb64659c3824b102833785.html  enum_pm4_8h_1aa7a52ffd04fdfabbc94959a8a9ceb41b.html  enum_sift_8h_1a17a86ed2010023c76c0155895b659951.html  enum_sift_8h_1aa9670ab3ebf3ba3cb5bbe85cb8579db7.html  enum_sift_8h_1ae4f3483e524f8a5a9de35716fd7b1360.html  enum_status_8h_1a9717b0fa8559dd8925ce32cb47e598b4.html  file_include_rocsift_chipid.h.html  file_include_rocsift_kfd.h.html  file_include_rocsift_mtype.h.html  file_include_rocsift_pm4.h.html  file_include_rocsift_sift.h.html  file_include_rocsift_status.h.html  file_include_rocsift_visibility.h.html  file_include_rocsift_xlator.h.html  function_chipid_8h_1a1fb7dd4669c7d77ecedb9bc1ea2fdd61.html  function_chipid_8h_1a27f3330c33ea49f1293f5a8c5d2ece41.html  function_chipid_8h_1a319da37d4fbec9794cb21bf11754731f.html  function_chipid_8h_1a331e266a3d9d67dfce7067cddd7f3a0a.html  function_chipid_8h_1a5aefc2d12ff9d5a99653f7c9d0bb2ac1.html  function_chipid_8h_1a5d3caf697d3af23d5ae081b1c606c82a.html  function_chipid_8h_1a782964a5fcaf5a8e139488b5b23ea0af.html  function_chipid_8h_1a826af65ad0588c2aeae2e4afc08c619d.html  function_chipid_8h_1a9c93bc26aefd9cf87b5e5ecec5ba55a5.html  function_chipid_8h_1a9d1c916f66e7881eea5de48819a15cf9.html  function_chipid_8h_1ac2b5fba8cfb8803848edede3c45940f9.html  function_chipid_8h_1afc50a5359fb58b0a10d75642b851fdf4.html  function_kfd_8h_1a13a2f3f0520b5ccfa479cfddcb661d62.html  function_kfd_8h_1a2c54ae64b9e986583b6c67fa71da9ae9.html  function_kfd_8h_1a409b8b71b341fb66e3f850609ec29157.html  function_kfd_8h_1a5e6abad108a962fdca0feaf18e6b5aa8.html  function_kfd_8h_1a9710732d0435aef117bfa8c777627806.html  function_kfd_8h_1a9769b5977c45c804abdf067755f2b883.html  function_kfd_8h_1aaf5879c8964a9caf3bba318d54fd33c7.html  function_kfd_8h_1adee799872b27180fec7e6a82e110d3e1.html  function_mtype_8h_1a2de72a5e97b834989078fd6f33eaf2d9.html  (+66 more)
cmake/: FindRocsift.cmake  add_FetchContent_MakeAvailable.cmake  commit-hooks.cmake
cmake/util/: git_pre-commit.in
cmd/: CMakeLists.txt  cpc_scratch.cc  dumprls.cc  list_partitions.cc  pskfd.cc  read_mem.cc  read_reg32.cc  rocsift_tools.cc  status.cc  va2pa.cc  write_reg32.cc
docs_exhale/: Makefile  conf.py  make.bat  requirements.txt
include/rocsift/: chipid.h  kfd.h  mtype.h  pm4.h  sift.h  status.h  visibility.h  xlator.h
packaging/: CMakeLists.txt  custom_cpack.cmake  packaging.cmake  rocsiftConfig.cmake
scripts/: cmake-dev.sh  cmake-release.sh
src/: CMakeLists.txt
src/drm/: drm.cc  drm.h
src/kfd/: kfdcapi.cc  kfddebugfs.cc  kfddebugfs.h  kfdnode.cc  kfdnode.h  kfdtop.cc  kfdtop.h
src/pm4/: pm4.cc  pm4.h  rls_parser.cc  rls_parser.h  span.h
src/sift/: amdgpu_debugfs.cc  amdgpu_debugfs.h  capi.cc  capi.h  debugfs_iomem_accessor.cc  debugfs_iomem_accessor.h  debugfs_mmio_accessor.cc  debugfs_mmio_accessor.h  debugfs_smn_accessor.cc  debugfs_smn_accessor.h  debugfs_vram_accessor.cc  debugfs_vram_accessor.h  device.cc  device.h  engine.cc  engine.h  fdowner.cc  fdowner.h  ip_discovery.cc  ip_discovery.h  logging.h  partition.cc  partition.h  pci_mmio_accessor.cc  pci_mmio_accessor.h  sram_accessor.cc  sram_accessor.h  statuserror.h
src/xlator/: xlator.c
tests/: CMakeLists.txt  enumerate.cc  pm4.cc
